# shell_completion

./: Cargo.toml  README.md
cargo_completion/src/: main.rs
fabric_completion/: Cargo.toml
fabric_completion/src/: main.rs
shell_completion/src/: lib.rs
